--- a/BTManagement.WebUI/Views/Shared/_LayoutLogin.cshtml
+++ b/BTManagement.WebUI/Views/Shared/_LayoutLogin.cshtml
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="~/template/css/vertical-layout-light/style.css">
     <link href="~/lib/fontawesome/css/fontawesome.min.css" rel="stylesheet" />
     <link href="~/lib/fontawesome/css/all.min.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="~/template/images/favicon.png" />
+    <link rel="shortcut icon" href="~/template/images/dsi24.png" />
 </head>
 
 <body>
